--- a/rd.Rmd
+++ b/rd.Rmd
@@ -18,8 +18,8 @@ brand: |-
 ---
 <h1>Sego Miscellaneous</h1>
 
-<p><strong>Authors:</strong> (none)</p>
-<p><strong>Version:</strong> 0.3.3</p>
+<p><strong>Authors:</strong> <a href="mailto:Landon.Sego@pnnl.gov">Landon Sego</a> [aut, cre]</p>
+<p><strong>Version:</strong> 0.3.4</p>
 <p><strong>License:</strong> file LICENSE</p>
 
 <h4>Description</h4>
@@ -599,73 +599,6 @@ select(d, 0, cols = FALSE)</code></pre>
 <h4>Author</h4>
 
 Landon Sego
-
-
-
-
-## sortDF
-
-<h3>Sort a dataframe</h3>
-
-<p class="rd-p">Sort a dataframe by one or more ascending or descening variables</p>
-
-<h4>Usage</h4>
-<pre class="r"><code>sortDF(form, dat)</code></pre>
-
-<h4>Arguments</h4>
-<dl class="rd-dl">
-  <dt>form</dt>
-  <dd class="rd-dd">A formula with the variable names to use for sorting</dd>
-  <dt>dat</dt>
-  <dd class="rd-dd">The dataframe to sort</dd>
-</dl>
-
-  <h4>Details</h4>
-
-  <p class="rd-p">The order of the arguments <code>form</code> and <code>dat</code> is
-interchangeable.  In the formula, use + for ascending, - for
-decending. Sorting is left to right in the formula. 
-For example, to sort the dataframe <code>Oats</code> with sorting variables <code>Block</code> and
-<code>Variety</code>, useage is either of the following: 
-<code>sortDF(~ Block - Variety, Oats)</code>  or
-<code>sortDF(Oats, ~ - Variety + Block)</code></p>
-
-
-  <h4>Value</h4>
-
-  <p class="rd-p"><dl>
-The sorted dataframe
-</dl></p>
-
-
-  <h4>References</h4>
-
-  <p class="rd-p"><a href = #https://stat.ethz.ch/pipermail/r-help/2004-september/057954>https://stat.ethz.ch/pipermail/r-help/2004-September/057954.html</a></p>
-
-
-
-<h4>Examples</h4>
-<pre class="r"><code>d <- data.frame(b = factor(c("Hi","Med","Hi","Low"), levels = c("Low","Med","Hi"), 
-                           ordered = TRUE),
-                x = c("A", "D", "A", "C"),
-                y = c(8, 3, 9, 9),
-                z = c(1, 1, 1, 2))
-
-# Sort by descending z, descending b
-sortDF(~ -z - b, d)
-
-# Sort by ascending x, ascending y, and ascending z
-sortDF(~x + y + z, d)
-
-# Sort by descending x, ascending y, ascending z
-sortDF(~ -x + y + z, d)
-
-# Sort by ascending x, descending y, ascending z
-sortDF(d, ~x - y + z) </code></pre>
-
-<h4>Author</h4>
-
-Kevin Wright with ideas from Any Liaw and small edits by Landon Sego
 
 
 # Conversion to and from lists
@@ -2863,262 +2796,7 @@ vertErrorBar(x, 0.3, center = y, barLength = 2 * 1.96, blankMiddle = 0.25)</code
 Landon Sego
 
 
-
-
-## interactionPlot
-
-<h3>Two-way Interaction Plot with Error Bar</h3>
-
-<p class="rd-p">Plots the mean (or other summary) of the response for two-way combinations
-of factors, thereby illustrating possible interactions.
-This modifies <code><a href='http://www.inside-r.org/r-doc/stats/interaction.plot'>interaction.plot</a></code> by adding the <code>errorBar</code> and
-<code>jitterErrorBars</code> arguments, making it possible to add error bars of the
-same length to the plot.</p>
-
-<h4>Usage</h4>
-<pre class="r"><code>interactionPlot(x.factor, trace.factor, response, fun = mean,
-  errorBar = NULL, jitterErrorBars = NULL, type = c("l", "p", "b", "o",
-  "c"), legend = TRUE, trace.label = deparse(substitute(trace.factor)),
-  fixed = FALSE, xlab = deparse(substitute(x.factor)), ylab = ylabel,
-  ylim = range(cells, na.rm = TRUE), lty = nc:1, col = 1, pch = c(1L:9,
-  0, letters), xpd = NULL, leg.bg = par("bg"), leg.bty = "n",
-  xtick = FALSE, xaxt = par("xaxt"), axes = TRUE, ...)</code></pre>
-
-<h4>Arguments</h4>
-<dl class="rd-dl">
-  <dt>x.factor</dt>
-  <dd class="rd-dd">a factor whose levels will form the x axis.</dd>
-  <dt>trace.factor</dt>
-  <dd class="rd-dd">another factor whose levels will form the traces.</dd>
-  <dt>response</dt>
-  <dd class="rd-dd">a numeric variable giving the response.</dd>
-  <dt>fun</dt>
-  <dd class="rd-dd">the function to compute the summary. Should return a single real
-value.</dd>
-  <dt>errorBar</dt>
-  <dd class="rd-dd">A list with required elements <code>barLength</code> and
-<code>width</code>, and optional element <code>blankMiddle</code>. These correspond to
-the arguments of <code><a href=#verterrorbar>vertErrorBar</a></code>.  Defaults to <code>NULL</code>, in
-which case no error bars are drawn.  Currently, error bars must all be the same
-length and have the same width. Thus, elements in the list should be atomic (of length 1).</dd>
-  <dt>jitterErrorBars</dt>
-  <dd class="rd-dd">A list with the <code>factor</code> and/or <code>amount</code> arguments that will be
-passed to <code><a href=http://www.inside-r.org/r-doc/base/jitter>jitter</a></code>, indicating the amount (and/or factor) by which the x-values of the points
-(and the error bars) should be jittered for easier readibility. No jittering is performed if
-<code>jitterErrorBars = NULL</code>. This argument is ignored if <code>errorBar = NULL</code>.</dd>
-  <dt>type</dt>
-  <dd class="rd-dd">the type of plot (see <code><a href=http://www.inside-r.org/r-doc/graphics/plot.default>plot.default</a></code>): lines or
-points or both.</dd>
-  <dt>legend</dt>
-  <dd class="rd-dd">logical. Should a legend be included?</dd>
-  <dt>trace.label</dt>
-  <dd class="rd-dd">overall label for the legend.</dd>
-  <dt>fixed</dt>
-  <dd class="rd-dd">logical.  Should the legend be in the order of the levels of
-<code>trace.factor</code> or in the order of the traces at their right-hand ends?</dd>
-  <dt>xlab, ylab</dt>
-  <dd class="rd-dd">the x and y label of the plot each with a sensible
-default.</dd>
-  <dt>ylim</dt>
-  <dd class="rd-dd">numeric of length 2 giving the y limits for the plot.</dd>
-  <dt>lty</dt>
-  <dd class="rd-dd">line type for the lines drawn, with sensible default.</dd>
-  <dt>col</dt>
-  <dd class="rd-dd">the color to be used for plotting.</dd>
-  <dt>pch</dt>
-  <dd class="rd-dd">a vector of plotting symbols or characters, with sensible
-default.</dd>
-  <dt>xpd</dt>
-  <dd class="rd-dd">determines clipping behaviour for the <code><a href=http://www.inside-r.org/r-doc/graphics/legend>legend</a></code> used,
-see <code><a href=http://www.inside-r.org/r-doc/graphics/par>par</a>(xpd)</code>.  Per default, the legend is <em>not</em> clipped
-at the figure border.</dd>
-  <dt>leg.bg, leg.bty</dt>
-  <dd class="rd-dd">arguments passed to <code><a href=http://www.inside-r.org/r-doc/graphics/legend>legend</a>()</code>.</dd>
-  <dt>xtick</dt>
-  <dd class="rd-dd">logical. Should tick marks be used on the x axis?</dd>
-  <dt>xaxt, axes</dt>
-  <dd class="rd-dd">graphics parameters to be passed to the plotting
-routines.</dd>
-  <dt>...</dt>
-  <dd class="rd-dd">graphics parameters to be passed to the plotting routines.</dd>
-</dl>
-
-  <h4>Details</h4>
-
-  <p class="rd-p">By default the levels of <code>x.factor</code> are plotted on the x axis in their
-given order, with extra space left at the right for the legend (if
-specified). If <code>x.factor</code> is an ordered factor and the levels are
-numeric, these numeric values are used for the x axis.</p>
-
-  <p class="rd-p">The response and hence its summary can contain missing values. If so, the
-missing values and the line segments joining them are omitted from the plot
-(and this can be somewhat disconcerting).</p>
-
-  <p class="rd-p">The graphics parameters <code>xlab</code>, <code>ylab</code>, <code>ylim</code>, <code>lty</code>,
-<code>col</code> and <code>pch</code> are given suitable defaults (and <code>xlim</code> and
-<code>xaxs</code> are set and cannot be overridden).  The defaults are to cycle
-through the line types, use the foreground colour, and to use the symbols
-1:9, 0, and the capital letters to plot the traces.</p>
-
-
-  <h4>Note</h4>
-
-  <p class="rd-p">Some of the argument names and the precise behaviour are chosen for
-S-compatibility.</p>
-
-
-  <h4>References</h4>
-
-  <p class="rd-p">Chambers, J. M., Freeny, A and Heiberger, R. M. (1992)
-<em>Analysis of variance; designed experiments.</em> Chapter 5 of
-<em>Statistical Models in S</em> eds J. M. Chambers and T. J. Hastie,
-Wadsworth & Brooks/Cole.</p>
-
-
-
-<h4>Examples</h4>
-<pre class="r"><code>with(ToothGrowth, {
-
-# Basic interaction plot
-interactionPlot(dose, supp, len, fixed = TRUE)
-
-# Ordered dose
-dose <- ordered(dose)
-interactionPlot(dose, supp, len, fixed = TRUE, col  =  2:3, leg.bty = "o")
-
-# Add error bars
-interactionPlot(dose, supp, len, fixed = TRUE, col  =  2:3, type = "p",
-                errorBar = list(barLength = 3, width = 0.05, blankMiddle = 1),
-                jitterErrorBars = list(factor = 1.5),
-                main = "Error bars have no meaning: just for illustration")
-})</code></pre>
-
-<h4>See also</h4>
-
-<code><a href=http://www.inside-r.org/r-doc/stats/interaction.plot>interaction.plot</a></code>
-
-
-<h4>Author</h4>
-
-Originates in the <code>stats</code> package in the R distribution,
-modifications by Landon Sego
-
-
 # Statistical functions
-
-
-
-## dbb
-
-<h3>The Beta-Binomial Distribution</h3>
-
-<p class="rd-p">Density, distribution function, quantile function, and random generation
-for the beta-binomial distribution.  A beta-binomial variate
-follows the binomial distribution with parameters
-<code>N</code> and <code>p</code>, where the probability <code>p</code> of success itself has
-a beta distribution with parameters <code>u</code> and <code>v</code>.</p>
-
-<h4>Usage</h4>
-<pre class="r"><code>dbb(x, N, u, v)
-pbb(q, N, u, v)
-qbb(p, N, u, v)
-rbb(n, N, u, v)</code></pre>
-
-<h4>Arguments</h4>
-<dl class="rd-dl">
-  <dt>x</dt>
-  <dd class="rd-dd">vector of qauntiles</dd>
-  <dt>N</dt>
-  <dd class="rd-dd">number of trials (a positive integer)</dd>
-  <dt>u</dt>
-  <dd class="rd-dd">first positive parameter of the beta distribution</dd>
-  <dt>v</dt>
-  <dd class="rd-dd">second positive parameter of the beta distribution</dd>
-  <dt>q</dt>
-  <dd class="rd-dd">vector of quantiles</dd>
-  <dt>p</dt>
-  <dd class="rd-dd">vector of probabilities</dd>
-  <dt>n</dt>
-  <dd class="rd-dd">number of observations</dd>
-</dl>
-
-  <h4>Details</h4>
-
-  <p class="rd-p">The beta-binomial distribution with parameters <em>N</em>, <em>u</em>, and
-<em>v</em> has mass function given by <em>choose(N, x) * Beta(x + u, N - x + v) /
-Beta(u, v)</em> for <em>u > 0</em>, <em>v > 0</em>, a positive integer <em>N</em>, and
-any nonnegative integer <em>x</em>. Although one can express the integral in
-closed form using generalized hypergeometric functions, the implementation
-of distribution function used here simply relies on the cumulative sum of
-the mass function.</p>
-
-  <p class="rd-p">The mean, <em>mu</em>, and variance, <em>sigma^2</em>, of the beta-binomial distribution
-can be computed explicitly as <em>mu = N * u / (u + v)</em> and
-<em>sigma^2 = (N * u * v * (N + u + v)) / ((u + v)^2 * (1 + u + v))</em>.</p>
-
-  <p class="rd-p"><code>dbb</code> and <code>qbb</code> do not recycle vector-valued arguments in
-the usual fashion in R.  Arguments to these functions must have length 1
-and/or one other common length. See example of <code><a href=#pcbinom>pcbinom</a></code> for more
-information.</p>
-
-  <p class="rd-p">Non-integer values of <code>x</code> and <code>N</code> are rounded to the nearest
-integer with a warning.</p>
-
-
-  <h4>Value</h4>
-
-  <p class="rd-p"><dl>
-<code>dbb</code> gives the density, <code>pbb</code> gives the distribution
-function, <code>qbb</code> gives the quantile function, and <code>rbb</code> generates
-random deviates.
-</dl></p>
-
-
-  <h4>Warning</h4>
-
-  <p class="rd-p"><code>dbb</code>, <code>pbb</code>, and <code>qbb</code> can be imprecise
-when the probabilities for tail values are small.  This can result in
-unusual behavior for <code>pbb</code> and <code>qbb</code>.</p>
-
-
-  <h4>References</h4>
-
-  <p class="rd-p"><a href = http://bioinformatics.mdanderson.org/Software/OOMPA/Current/TailRank-manual.pdf>http://bioinformatics.mdanderson.org/Software/OOMPA/Current/TailRank-manual.pdf</a></p>
-
-
-
-<h4>Examples</h4>
-<pre class="r"><code># set up parameters
-w <- 10
-u <- 0.3 *w
-v <- 0.7 * w
-N <- 12
-
-# generate random values from the beta-binomial
-x <- rbb(1000, N, u, v)
-
-# check that the empirical summary matches the theoretical one
-summary(x)
-qbb(c(0.25, 0.50, 0.75), N, u, v)
-
-# check that the empirical histogram matches the theoretical density
-hist(x, breaks=seq(-0.5, N + 0.55), prob = TRUE)
-lines(0:N, dbb(0:N, N, u,v), type = "b")
-
-# An example of the imprecision in pbb and qbb:  we would expect
-# this to return 0:29
-qbb(pbb(0:29, 29, 1, 33), 29, 1, 33)</code></pre>
-
-<h4>See also</h4>
-
-<code><a href=http://www.inside-r.org/r-doc/stats/Beta>dbeta</a></code> for the beta distribution and
-<code><a href=http://www.inside-r.org/r-doc/stats/Binomial>dbinom</a></code> for the binomial distribution.
-
-
-<h4>Author</h4>
-
-Kevin R. Coombes, modified by Landon Sego
-
 
 
 
@@ -3904,7 +3582,7 @@ Cusum resets.
 <li> <code>plot</code>: Plots the <code>cusum</code> object.</p>
 
   <p class="rd-p"></li>
-<li> <code>signal</code>: Prints the indexes that exceed the control limit
+<li> <code>signal</code>: Prints the indexes in a <code>cusum</code> object that exceed the control limit
 </li>
 </ul></p>
 
